@@ -7,51 +7,90 @@
 
 <!DOCTYPE params SYSTEM "../tgf/params.dtd">
 
-<params name="exitmenu">
+<params name="interventionmenu">
 
     <section name="dynamic controls">
 
-        <section name="yesquit">
-            <attstr name="type" val="text button"/>
-            <attstr name="show box" val="no"/>
-            <attstr name="text" val="Yes, let's quit"/>
-            <attstr name="tip" val="Exit from the game"/>
-            <attnum name="x" val="260"/>
-            <attnum name="y" val="290"/>
-            <attnum name="width" val="320"/>
-            <attstr name="h align" val="left"/>
-            <attstr name="font" val="big"/>
-            <attstr name="color" val="0xFFFFFF"/>
-            <attstr name="focused color" val="0xFFFFFF"/>
-            <attstr name="pushed color" val="0xFFFFFF"/>
-            <attnum name="image x" val="-48"/>
-            <attnum name="image y" val="0"/>
-            <attnum name="image width" val="320"/>
-            <attnum name="image height" val="31"/>
-            <attstr name="focused image" val="data/img/bg-button-big-focused.png"/>
-            <attstr name="enabled image" val="data/img/bg-button-big.png"/>
-            <attstr name="pushed image" val="data/img/bg-button-big-pushed.png"/>
+        <section name="interventionleftarrow">
+            <attstr name="type" val="image button"/>
+            <attnum name="width" val="24"/>
+            <attnum name="height" val="24"/>
+            <attstr name="tip" val=""/>
+            <attnum name="x" val="250"/>
+            <attnum name="y" val="318"/>
+            <attstr name="disabled image" val="data/img/arrow-left-top-disabled.png"/>
+            <attstr name="enabled image" val="data/img/arrow-left-top.png"/>
+            <attstr name="focused image" val="data/img/arrow-left-top-focused.png"/>
+            <attstr name="pushed image" val="data/img/arrow-left-top-pushed.png"/>
         </section>
 
-        <section name="nobacktogame">
+        <section name="interventionrightarrow">
+            <attstr name="type" val="image button"/>
+            <attnum name="width" val="24"/>
+            <attnum name="height" val="24"/>
+            <attstr name="tip" val=""/>
+            <attnum name="x" val="480"/>
+            <attnum name="y" val="318"/>
+            <attstr name="disabled image" val="data/img/arrow-right-top-disabled.png"/>
+            <attstr name="enabled image" val="data/img/arrow-right-top.png"/>
+            <attstr name="focused image" val="data/img/arrow-right-top-focused.png"/>
+            <attstr name="pushed image" val="data/img/arrow-right-top-pushed.png"/>
+        </section>
+
+        <section name="interventionlabel">
+            <attstr name="type" val="label"/>
+            <attnum name="max len" val="22"/>
+            <attstr name="tip" val="Set the type of intervention the driver assistant can make"/>
+            <attnum name="x" val="295"/>
+            <attnum name="y" val="322"/>
+            <attnum name="width" val="160"/>
+            <attstr name="h align" val="center"/>
+            <attstr name="color" val="0xFFFFFF"/>
+            <attstr name="font" val="medium"/>
+        </section>
+
+        <section name="CancelButton">
             <attstr name="type" val="text button"/>
             <attstr name="show box" val="no"/>
-            <attstr name="text" val="No, back to game"/>
-            <attstr name="tip" val="Return to previous menu"/>
+            <attstr name="text" val="Cancel"/>
+            <attstr name="tip" val="Cancel changes"/>
             <attstr name="h align" val="left"/>
-            <attnum name="x" val="260"/>
-            <attnum name="y" val="258"/>
-            <attnum name="width" val="320"/>
-            <attstr name="font" val="big"/>
+            <attnum name="x" val="278"/>
+            <attnum name="y" val="82"/>
+            <attnum name="width" val="120"/>
+            <attstr name="font" val="medium"/>
             <attstr name="color" val="0xFFFFFF"/>
             <attstr name="focused color" val="0xFFFFFF"/>
             <attstr name="pushed color" val="0xFFFFFF"/>
-            <attnum name="image x" val="-48"/>
-            <attnum name="image y" val="0"/>
-            <attnum name="image width" val="320"/>
-            <attnum name="image height" val="33"/>
-            <attstr name="focused image" val="data/img/bg-button-big-focused-last.png"/>
-            <attstr name="pushed image" val="data/img/bg-button-big-pushed-last.png"/>
+            <attnum name="image x" val="-10"/>
+            <attnum name="image y" val="4"/>
+            <attnum name="image width" val="60"/>
+            <attnum name="image height" val="16"/>
+            <attstr name="focused image" val="data/img/button-left-focused.png"/>
+            <attstr name="enabled image" val="data/img/button-left.png"/>
+            <attstr name="pushed image" val="data/img/button-left-pushed.png"/>
+        </section>
+
+        <section name="ApplyButton">
+            <attstr name="type" val="text button"/>
+            <attstr name="show box" val="no"/>
+            <attstr name="text" val="Apply"/>
+            <attstr name="tip" val="Accept and save changes"/>
+            <attstr name="h align" val="left"/>
+            <attnum name="x" val="435"/>
+            <attnum name="y" val="82"/>
+            <attnum name="width" val="120"/>
+            <attstr name="font" val="medium"/>
+            <attstr name="color" val="0xFFFFFF"/>
+            <attstr name="focused color" val="0xFFFFFF"/>
+            <attstr name="pushed color" val="0xFFFFFF"/>
+            <attnum name="image x" val="-10"/>
+            <attnum name="image y" val="4"/>
+            <attnum name="image width" val="60"/>
+            <attnum name="image height" val="16"/>
+            <attstr name="focused image" val="data/img/button-left-focused.png"/>
+            <attstr name="enabled image" val="data/img/button-left.png"/>
+            <attstr name="pushed image" val="data/img/button-left-pushed.png"/>
         </section>
 
     </section>
@@ -59,26 +98,36 @@
     <section name="static controls">
 
         <section name="1">
-            <attstr name="type" val="static image"/>
-            <attnum name="x" val="-10"/>
-            <attnum name="y" val="305"/>
-            <attnum name="width" val="195"/>
-            <attnum name="height" val="130"/>
-            <attstr name="image" val="data/img/sd-logo-big.png"/>
+            <attstr name="type" val="background image"/>
+            <attstr name="image" val="data/img/splash-aiconf.jpg"/> <!-- TODO change background -->
         </section>
 
         <section name="2">
-            <attstr name="type" val="background image"/>
-            <attstr name="image" val="data/img/splash-quit.jpg"/>
+            <attstr name="type" val="static image"/>
+            <attnum name="x" val="-10"/>
+            <attnum name="y" val="335"/>
+            <attnum name="width" val="200"/>
+            <attnum name="height" val="120"/>
+            <attstr name="image" val="data/img/sd-logo.png"/> <!-- TODO maybe remove logo -->
         </section>
 
         <section name="3">
             <attstr name="type" val="static image"/>
             <attnum name="x" val="212"/>
-            <attnum name="y" val="410"/>
+            <attnum name="y" val="400"/>
             <attnum name="width" val="450"/>
             <attnum name="height" val="20"/>
-            <attstr name="image" val="data/img/head-quit.png"/>
+            <attstr name="image" val="data/img/head-aiconfig.png"/> <!-- TODO change text-image -->
+        </section>
+
+        <section name="4">
+            <attstr name="type" val="label"/>
+            <attnum name="x" val="20"/>
+            <attnum name="y" val="322"/>
+            <attstr name="text" val="Intervention type:"/>
+            <attstr name="h align" val="right"/>
+            <attnum name="width" val="220"/>
+            <attstr name="font" val="small_t"/>
         </section>
 
     </section>
