@@ -2,6 +2,8 @@
 
 typedef unsigned int INTERVENTION_TYPE;
 
-#define INTERVENTION_TYPE_NO_ASSISTANCE   0
-#define INTERVENTION_TYPE_INDICATION      1
-#define INTERVENTION_TYPE_FULL_ASSISTANCE 2
+#define INTERVENTION_TYPE_NO_INTERVENTION       0
+#define INTERVENTION_TYPE_INDICATION            1
+#define INTERVENTION_TYPE_ASK_FOR               2
+#define INTERVENTION_TYPE_PERFORM_WHEN_NEEDED   3
+#define INTERVENTION_TYPE_ALWAYS_INTERVENE      4
